// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Visual Regression Tests > Card Component Snapshots > should match snapshot for DarkCard with admin theme 1`] = `
<div
  class="dark-card "
  style="background: rgba(17, 17, 17, 0.8); border: 1px solid rgba(255, 255, 255, 0.06); border-radius: 12px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); padding: 1.5rem; transition: all 0.3s ease; transform: translateY(0);"
>
  <h3>
    Card Title
  </h3>
  <p>
    Card content goes here
  </p>
</div>
`;

exports[`Visual Regression Tests > Card Component Snapshots > should match snapshot for GlassCard 1`] = `
<div
  class="glass-card "
  style="background: rgba(255, 255, 255, 0.03); border: 1px solid rgba(255, 255, 255, 0.06); border-radius: 12px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); padding: 1.5rem; transition: all 0.3s ease;"
>
  <h3>
    Glass Card
  </h3>
  <p>
    Glassmorphism effect
  </p>
</div>
`;

exports[`Visual Regression Tests > Card Component Snapshots > should match snapshot for StatCard 1`] = `
<div
  class=""
  style="opacity: 0; transform: translate(0, 20px); transition: opacity 0.6s ease-out 0ms, transform 0.6s ease-out 0ms;"
>
  <div
    class="stat-card "
    style="background: rgba(17, 17, 17, 0.8); border: 1px solid rgba(255, 255, 255, 0.06); border-radius: 12px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); padding: 1.5rem;"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-users"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      style="color: rgb(139, 92, 246); width: 2.5rem; height: 2.5rem; margin-bottom: 0.75rem;"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
      />
      <path
        d="M16 3.128a4 4 0 0 1 0 7.744"
      />
      <path
        d="M22 21v-2a4 4 0 0 0-3-3.87"
      />
      <circle
        cx="9"
        cy="7"
        r="4"
      />
    </svg>
    <div
      style="color: rgba(255, 255, 255, 0.65); font-size: 0.875rem; font-weight: 500; margin-bottom: 0.5rem;"
    >
      Total Users
    </div>
    <div
      style="color: rgb(139, 92, 246); font-size: 2rem; font-weight: 700; line-height: 1.2; margin-bottom: 0px;"
    >
      150
    </div>
  </div>
</div>
`;

exports[`Visual Regression Tests > Theme Variations > should match snapshot for DarkCard with admin theme 1`] = `
<div
  class="dark-card "
  style="background: rgba(17, 17, 17, 0.8); border: 1px solid rgba(255, 255, 255, 0.06); border-radius: 12px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); padding: 1.5rem; transition: all 0.3s ease; transform: translateY(0);"
>
  Card Content
</div>
`;

exports[`Visual Regression Tests > Theme Variations > should match snapshot for DarkCard with coach theme 1`] = `
<div
  class="dark-card "
  style="background: rgba(17, 17, 17, 0.8); border: 1px solid rgba(255, 255, 255, 0.06); border-radius: 12px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); padding: 1.5rem; transition: all 0.3s ease; transform: translateY(0);"
>
  Card Content
</div>
`;

exports[`Visual Regression Tests > Theme Variations > should match snapshot for DarkCard with judge theme 1`] = `
<div
  class="dark-card "
  style="background: rgba(17, 17, 17, 0.8); border: 1px solid rgba(255, 255, 255, 0.06); border-radius: 12px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); padding: 1.5rem; transition: all 0.3s ease; transform: translateY(0);"
>
  Card Content
</div>
`;

exports[`Visual Regression Tests > Theme Variations > should match snapshot for DarkCard with player theme 1`] = `
<div
  class="dark-card "
  style="background: rgba(17, 17, 17, 0.8); border: 1px solid rgba(255, 255, 255, 0.06); border-radius: 12px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); padding: 1.5rem; transition: all 0.3s ease; transform: translateY(0);"
>
  Card Content
</div>
`;

exports[`Visual Regression Tests > Theme Variations > should match snapshot for DarkCard with superadmin theme 1`] = `
<div
  class="dark-card "
  style="background: rgba(17, 17, 17, 0.8); border: 1px solid rgba(255, 255, 255, 0.06); border-radius: 12px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); padding: 1.5rem; transition: all 0.3s ease; transform: translateY(0);"
>
  Card Content
</div>
`;

exports[`Visual Regression Tests > Theme Variations > should match snapshot for ThemedButton with admin theme 1`] = `
<button
  class="inline-flex items-center justify-center gap-2 rounded-lg transition-all duration-200 outline-none focus:ring-3 px-4 py-3 text-base min-h-[44px] text-white font-medium hover:opacity-90"
  style="background-color: rgb(139, 92, 246);"
  tabindex="0"
>
  Button
</button>
`;

exports[`Visual Regression Tests > Theme Variations > should match snapshot for ThemedButton with coach theme 1`] = `
<button
  class="inline-flex items-center justify-center gap-2 rounded-lg transition-all duration-200 outline-none focus:ring-3 px-4 py-3 text-base min-h-[44px] text-white font-medium hover:opacity-90"
  style="background-color: rgb(34, 197, 94);"
  tabindex="0"
>
  Button
</button>
`;

exports[`Visual Regression Tests > Theme Variations > should match snapshot for ThemedButton with judge theme 1`] = `
<button
  class="inline-flex items-center justify-center gap-2 rounded-lg transition-all duration-200 outline-none focus:ring-3 px-4 py-3 text-base min-h-[44px] text-white font-medium hover:opacity-90"
  style="background-color: rgb(139, 92, 246);"
  tabindex="0"
>
  Button
</button>
`;

exports[`Visual Regression Tests > Theme Variations > should match snapshot for ThemedButton with player theme 1`] = `
<button
  class="inline-flex items-center justify-center gap-2 rounded-lg transition-all duration-200 outline-none focus:ring-3 px-4 py-3 text-base min-h-[44px] text-white font-medium hover:opacity-90"
  style="background-color: rgb(255, 107, 0);"
  tabindex="0"
>
  Button
</button>
`;

exports[`Visual Regression Tests > Theme Variations > should match snapshot for ThemedButton with superadmin theme 1`] = `
<button
  class="inline-flex items-center justify-center gap-2 rounded-lg transition-all duration-200 outline-none focus:ring-3 px-4 py-3 text-base min-h-[44px] text-white font-medium hover:opacity-90"
  style="background-color: rgb(245, 166, 35);"
  tabindex="0"
>
  Button
</button>
`;

exports[`Visual Regression Tests > ThemedButton Snapshots > should match snapshot for disabled state 1`] = `
<button
  class="inline-flex items-center justify-center gap-2 rounded-lg transition-all duration-200 outline-none focus:ring-3 px-4 py-3 text-base min-h-[44px] text-white font-medium opacity-50 cursor-not-allowed pointer-events-none"
  disabled=""
  style="background-color: rgb(139, 92, 246);"
  tabindex="0"
>
  Disabled
</button>
`;

exports[`Visual Regression Tests > ThemedButton Snapshots > should match snapshot for ghost variant with player theme 1`] = `
<button
  class="inline-flex items-center justify-center gap-2 rounded-lg transition-all duration-200 outline-none focus:ring-3 px-4 py-3 text-base min-h-[44px] bg-transparent font-medium hover:bg-white/5"
  style="color: rgb(255, 107, 0);"
  tabindex="0"
>
  Click Me
</button>
`;

exports[`Visual Regression Tests > ThemedButton Snapshots > should match snapshot for loading state 1`] = `
<button
  class="inline-flex items-center justify-center gap-2 rounded-lg transition-all duration-200 outline-none focus:ring-3 px-4 py-3 text-base min-h-[44px] text-white font-medium opacity-50 cursor-not-allowed pointer-events-none"
  disabled=""
  style="background-color: rgb(139, 92, 246);"
  tabindex="0"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-loader-circle animate-spin w-5 h-5"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 12a9 9 0 1 1-6.219-8.56"
    />
  </svg>
  Loading
</button>
`;

exports[`Visual Regression Tests > ThemedButton Snapshots > should match snapshot for outline variant with coach theme 1`] = `
<button
  class="inline-flex items-center justify-center gap-2 rounded-lg transition-all duration-200 outline-none focus:ring-3 px-4 py-3 text-base min-h-[44px] bg-transparent font-medium border-2 hover:bg-white/5"
  style="color: rgb(34, 197, 94); border-color: rgb(34, 197, 94);"
  tabindex="0"
>
  Click Me
</button>
`;

exports[`Visual Regression Tests > ThemedButton Snapshots > should match snapshot for solid variant with admin theme 1`] = `
<button
  class="inline-flex items-center justify-center gap-2 rounded-lg transition-all duration-200 outline-none focus:ring-3 px-4 py-3 text-base min-h-[44px] text-white font-medium hover:opacity-90"
  style="background-color: rgb(139, 92, 246);"
  tabindex="0"
>
  Click Me
</button>
`;

exports[`Visual Regression Tests > ThemedInput Snapshots > should match snapshot for default input with admin theme 1`] = `
<div
  class="w-full"
>
  <div
    class="relative"
  >
    <input
      class="w-full rounded-lg bg-white/5 backdrop-blur-sm text-white placeholder:text-white/45 border transition-all duration-200 outline-none px-4 py-3 text-base min-h-[44px] border-white/10 hover:border-white/20 focus:border-current"
      placeholder="Enter text"
      style="color: rgb(139, 92, 246);"
    />
  </div>
</div>
`;

exports[`Visual Regression Tests > ThemedInput Snapshots > should match snapshot for disabled input 1`] = `
<div
  class="w-full"
>
  <div
    class="relative"
  >
    <input
      class="w-full rounded-lg bg-white/5 backdrop-blur-sm text-white placeholder:text-white/45 border transition-all duration-200 outline-none px-4 py-3 text-base min-h-[44px] opacity-50 cursor-not-allowed border-white/5"
      disabled=""
      placeholder="Enter text"
      style="color: rgb(139, 92, 246);"
    />
  </div>
</div>
`;

exports[`Visual Regression Tests > ThemedInput Snapshots > should match snapshot for input with error 1`] = `
<div
  class="w-full"
>
  <div
    class="relative"
  >
    <input
      class="w-full rounded-lg bg-white/5 backdrop-blur-sm text-white placeholder:text-white/45 border transition-all duration-200 outline-none px-4 py-3 text-base min-h-[44px] border-red-500/50 focus:border-red-500"
      placeholder="Enter text"
      style="color: rgb(139, 92, 246);"
    />
  </div>
  <p
    aria-live="polite"
    class="mt-1.5 text-sm text-red-400"
    role="alert"
    style="opacity: 0; transform: translateY(-4px);"
  >
    This field is required
  </p>
</div>
`;

exports[`Visual Regression Tests > ThemedInput Snapshots > should match snapshot for input with icon 1`] = `
<div
  class="w-full"
>
  <div
    class="relative"
  >
    <div
      aria-hidden="true"
      class="absolute left-3 top-1/2 -translate-y-1/2 pointer-events-none"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-users w-5 h-5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        style="color: rgba(255, 255, 255, 0.45);"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
        />
        <path
          d="M16 3.128a4 4 0 0 1 0 7.744"
        />
        <path
          d="M22 21v-2a4 4 0 0 0-3-3.87"
        />
        <circle
          cx="9"
          cy="7"
          r="4"
        />
      </svg>
    </div>
    <input
      class="w-full rounded-lg bg-white/5 backdrop-blur-sm text-white placeholder:text-white/45 border transition-all duration-200 outline-none px-4 py-3 text-base min-h-[44px] pl-11 border-white/10 hover:border-white/20 focus:border-current"
      placeholder="Enter text"
      style="color: rgb(139, 92, 246);"
    />
  </div>
</div>
`;

exports[`Visual Regression Tests > ThemedSelect Snapshots > should match snapshot for default select with admin theme 1`] = `
<div
  class="relative w-full"
>
  <select
    class="w-full px-4 py-3 pr-10 rounded-lg bg-white/5 backdrop-blur-sm text-white border transition-all duration-200 outline-none appearance-none cursor-pointer min-h-[44px] border-white/10 hover:border-white/20 focus:border-current"
    style="color: rgb(139, 92, 246);"
  >
    <option
      disabled=""
      value=""
    >
      Select option
    </option>
    <option
      class="bg-gray-900 text-white"
      value="1"
    >
      Option 1
    </option>
    <option
      class="bg-gray-900 text-white"
      value="2"
    >
      Option 2
    </option>
    <option
      class="bg-gray-900 text-white"
      value="3"
    >
      Option 3
    </option>
  </select>
  <div
    aria-hidden="true"
    class="absolute right-3 top-1/2 -translate-y-1/2 pointer-events-none"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-chevron-down w-5 h-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      style="color: rgba(255, 255, 255, 0.45);"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m6 9 6 6 6-6"
      />
    </svg>
  </div>
</div>
`;

exports[`Visual Regression Tests > ThemedSelect Snapshots > should match snapshot for disabled select 1`] = `
<div
  class="relative w-full"
>
  <select
    class="w-full px-4 py-3 pr-10 rounded-lg bg-white/5 backdrop-blur-sm text-white border transition-all duration-200 outline-none appearance-none cursor-pointer min-h-[44px] opacity-50 cursor-not-allowed border-white/5"
    disabled=""
    style="color: rgb(139, 92, 246);"
  >
    <option
      disabled=""
      value=""
    >
      Select option
    </option>
    <option
      class="bg-gray-900 text-white"
      value="1"
    >
      Option 1
    </option>
    <option
      class="bg-gray-900 text-white"
      value="2"
    >
      Option 2
    </option>
    <option
      class="bg-gray-900 text-white"
      value="3"
    >
      Option 3
    </option>
  </select>
  <div
    aria-hidden="true"
    class="absolute right-3 top-1/2 -translate-y-1/2 pointer-events-none"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-chevron-down w-5 h-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      style="color: rgba(255, 255, 255, 0.3);"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m6 9 6 6 6-6"
      />
    </svg>
  </div>
</div>
`;

exports[`Visual Regression Tests > ThemedSelect Snapshots > should match snapshot for select with coach theme 1`] = `
<div
  class="relative w-full"
>
  <select
    class="w-full px-4 py-3 pr-10 rounded-lg bg-white/5 backdrop-blur-sm text-white border transition-all duration-200 outline-none appearance-none cursor-pointer min-h-[44px] border-white/10 hover:border-white/20 focus:border-current"
    style="color: rgb(34, 197, 94);"
  >
    <option
      disabled=""
      value=""
    >
      Select option
    </option>
    <option
      class="bg-gray-900 text-white"
      value="1"
    >
      Option 1
    </option>
    <option
      class="bg-gray-900 text-white"
      value="2"
    >
      Option 2
    </option>
    <option
      class="bg-gray-900 text-white"
      value="3"
    >
      Option 3
    </option>
  </select>
  <div
    aria-hidden="true"
    class="absolute right-3 top-1/2 -translate-y-1/2 pointer-events-none"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-chevron-down w-5 h-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      style="color: rgba(255, 255, 255, 0.45);"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m6 9 6 6 6-6"
      />
    </svg>
  </div>
</div>
`;
